<resources>
    <string name="app_name">Questionnaire_depression</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Zaloguj</string>
    <string name="action_sign_in_short">Zaloguj</string>
    <string name="error_invalid_email">Nieprawidłowy adres email</string>
    <string name="error_invalid_password">Hasło jest za krótkie</string>
    <string name="error_incorrect_password">Hasło jest błędne</string>
    <string name="error_field_required">Pole email jest wymagane</string>

    <string name="name_questionnaire">Skala depresji\nBecka</string>
    <string name="offline_network">Brak połączenia z internetem</string>
    <string name="offline_serv">Brak połączenia z serwerem</string>
    <string name="error_load_user_data">Problem z załadowaniem danych użytkownika.</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="logOutText">Wyloguj</string>
    <string name="title_activity_question">Ankieta</string>
    <string name="login">Logowanie</string>
    <string name="loading_data">Wczytywanie danych....</string>
    <string name="diagnosis">DIAGNOZA</string>
    <string name="title_activity_settings">Ustawienia</string>


    <string name="pref_title_new_message_notifications">Powiadomienie o nowym badaniu</string>
    <string name="title_activity_starter">StarterActivity</string>
    <string name="title_wait_classified">Oczekiwanie na weryfikację \nLekarz musi ocenić twój wstępny test</string>
    <string name="title_discard_classified">Nie zostałeś/aś zakwalifikowany/a \ndo dalszeo etapu badańe</string>
    <string name="title_activity_login">Logowanie</string>
    <string name="lost_connection">Oops, twoje połącznie z internetem zostało zerwane lub wystąpił problem z polączniem z serwerem</string>
    <string name="lost_connection_refresh">przeciągnij palcem w dół ekranu aby spróbować ponownie załadować dane</string>


</resources>
